--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -170,16 +170,24 @@
                         </div>
                     </div>
                     {% for currentGame in gameData %}
-                    <div class="row text-center border-bottom border-gray no-gutters" id="{{ currentGame.game.id }}">
+                    <div class="row text-center border-bottom border-gray no-gutters mt-2" id="{{ currentGame.game.id }}">
                         <div class="col-6 text-center">
                             <div class="d-flex justify-content-around align-items-center mb-2">
-                                <div class="col">
-                                    <img class="" src="/static/media/{{ currentGame.game.homeTeam.name }}.png" width="50" height="50">
+                                <div class="col-5">
+                                    <img class="" src="/static/media/{{ currentGame.game.homeTeam.name }}.png" width="50" height="50"> {% if currentGame.game.winner %} {% if currentGame.game.winner == currentGame.game.homeTeam %}
+                                    <h6><strong class="text-success">{{ currentGame.game.homeScore }}</strong></h6> {% else %}
+                                    <h6><strong class="text-danger">{{ currentGame.game.homeScore }}</strong></h6> {% endif %} {% else %}
+                                    <h5>-</h5>{% endif %}
                                     <h6><small>({{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }})</small></h6>
                                 </div>
-                                <h4>@</h4>
-                                <div class="col">
-                                    <img class="" src="/static/media/{{ currentGame.game.awayTeam.name }}.png" width="50" height="50">
+                                <div class="col-2">
+                                    <h4>@</h4>
+                                </div>
+                                <div class="col-5">
+                                    <img class="" src="/static/media/{{ currentGame.game.awayTeam.name }}.png" width="50" height="50"> {% if currentGame.game.winner %} {% if currentGame.game.winner == currentGame.game.awayTeam %}
+                                    <h6><strong class="text-success">{{ currentGame.game.awayScore }}</strong></h6> {% else %}
+                                    <h6><strong class="text-danger">{{ currentGame.game.awayScore }}</strong></h6> {% endif %} {% else %}
+                                    <h5>-</h5>{% endif %}
                                     <h6><small>({{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }})</small></h6>
                                 </div>
                             </div>
@@ -189,15 +197,33 @@
                             </div>
                         </div>
                         <div class="col-3 text-center pick">
-                            {% if currentGame.gameChoice.pickWinner != None %}
-                            <img src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png" width="50" height="50"> {% endif %}
+                            {% if currentGame.game.winner %} 
+                            {% if currentGame.gameChoice.pickWinner %} 
+                            {% if currentGame.gameChoice.correctPickFlag == True %}
+                            <img src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png" width="50" height="50">
+                            <h6 class="text-success"><strong>+50</strong></h6>
+                            {% else %}
+                            <img src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png" width="50" height="50">
+                            <h6 class="text-danger"><strong>+0</strong></h6>
+                            {% endif %} {% else %}
+                            <h5>No Pick</h5>
+                            <h6 class="text-danger"><strong>+0</strong></h6>
+                            {% endif %} {% else %} {% if currentGame.gameChoice.pickWinner %}
+                            <img class="" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png" width="50" height="50">{% endif %} {% endif %}
                         </div>
                         <div class="col-3 text-center bet">
-                            {% if currentGame.gameChoice.betWinner != None %} {% if currentGame.gameChoice.betWinner == currentGame.game.homeTeam.name %}}
+                            {% if currentGame.game.winner %} 
+                            {% if currentGame.gameChoice.betWinner %} 
+                            {% if currentGame.gameChoice.correctBetFlag == True %}
                             <img src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png" width="50" height="50">
-                            <h6>({{ currentGame.game.homeSpread }}) ${{ currentGame.gameChoice.betAmount }}</h6> {% else %}
+                            <h6 class="text-success"><strong>+{{ currentGame.gameChoice.amountWon }}</strong></h6>
+                            {% else %}
                             <img src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png" width="50" height="50">
-                            <h6>({{ currentGame.game.awaySpread }}) ${{ currentGame.gameChoice.betAmount }}</h6>{% endif %} {% endif %}
+                            <h6 class="text-danger"><strong>-{{ currentGame.gameChoice.amountWon }}</strong></h6>
+                            {% endif %} {% if currentGame.gameChoice.betWinner == currentGame.game.homeTeam %}
+                            <h6>({{ currentGame.game.homeSpread }}) ${{ currentGame.gameChoice.betAmount }}</h6>
+                            {% else %}
+                            <h6>({{ currentGame.game.awaySpread }}) ${{ currentGame.gameChoice.betAmount }}</h6> {% endif %} {% endif %} {% endif %}
                         </div>
                     </div>
                     {% endfor %} {% else %}
