--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -213,17 +213,30 @@
                         </div>
                         <div class="col-3 text-center bet">
                             {% if currentGame.game.winner %} 
-                            {% if currentGame.gameChoice.betWinner %} 
-                            {% if currentGame.gameChoice.correctBetFlag == True %}
-                            <img src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png" width="50" height="50">
-                            <h6 class="text-success"><strong>+{{ currentGame.gameChoice.amountWon }}</strong></h6>
+                                {% if currentGame.gameChoice.betWinner %} 
+                                    {% if currentGame.gameChoice.correctBetFlag == True %}
+                                    <img src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png" width="50" height="50">
+                                    <h6 class="text-success"><strong>+{{ currentGame.gameChoice.amountWon }}</strong></h6>
+                                    {% else %}
+                                    <img src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png" width="50" height="50">
+                                    <h6 class="text-danger"><strong>-{{ currentGame.gameChoice.amountWon }}</strong></h6>
+                                    {% endif %} 
+                                    {% if currentGame.gameChoice.betWinner == currentGame.game.homeTeam %}
+                                    <h6>({{ currentGame.game.homeSpread }}) {{ currentGame.gameChoice.betAmount }}</h6>
+                                    {% else %}
+                                    <h6>({{ currentGame.game.awaySpread }}) {{ currentGame.gameChoice.betAmount }}</h6> 
+                                    {% endif %} 
+                                {% endif %}
                             {% else %}
-                            <img src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png" width="50" height="50">
-                            <h6 class="text-danger"><strong>-{{ currentGame.gameChoice.amountWon }}</strong></h6>
-                            {% endif %} {% if currentGame.gameChoice.betWinner == currentGame.game.homeTeam %}
-                            <h6>({{ currentGame.game.homeSpread }}) {{ currentGame.gameChoice.betAmount }}</h6>
-                            {% else %}
-                            <h6>({{ currentGame.game.awaySpread }}) {{ currentGame.gameChoice.betAmount }}</h6> {% endif %} {% endif %} {% endif %}
+                                {% if currentGame.gameChoice.betWinner %} 
+                                <img src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png" width="50" height="50">
+                                {% if currentGame.gameChoice.betWinner == currentGame.game.homeTeam %}
+                                    <h6>({{ currentGame.game.homeSpread }}) {{ currentGame.gameChoice.betAmount }}</h6>
+                                    {% else %}
+                                    <h6>({{ currentGame.game.awaySpread }}) {{ currentGame.gameChoice.betAmount }}</h6> 
+                                    {% endif %}
+                                {% endif %}
+                            {% endif %}
                         </div>
                     </div>
                     {% endfor %} {% else %}
