Sore notifications by newest first. Added overflow to notification board.

--- a/home/static/home/dashboard.css
+++ b/home/static/home/dashboard.css
@@ -46,6 +46,8 @@ a.dashboard-menu-item {
 
 .notification-board {
     background-color: #212529;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .notification-box {
