Tweaked the look of the league dropdown menu. Removed background color.

--- a/static_in_env/css/global.css
+++ b/static_in_env/css/global.css
@@ -130,7 +130,7 @@ a.nav-link {
 }
 
 .nav-league {
-    background-color: #33A1FD;
+    /*background-color: #33A1FD;*/
     border-radius: 5px;
     border-style: solid;
     border-width: 1px;
