Made command/game settings page a container-fluid so that it is much easier to read

--- a/command/templates/command/gameOptions.html
+++ b/command/templates/command/gameOptions.html
@@ -1,6 +1,6 @@
 {% extends "fantasyFootball/base.html" %} {% block page_content %} {% load static %}
 
-<div class="container">
+<div class="container-fluid">
     <h1 id="seasonId" value="{{ season.year }}">Season Settings {{ season.year }} </h1>
     <div class="d-flex flex-row justify-content-between mb-2">
         <div class="col-lg-6">
