--- a/picks/templates/picks/picks.html
+++ b/picks/templates/picks/picks.html
@@ -8,8 +8,17 @@
         </div>
     </div>
 </div>
+<div class="d-flex flex-row justify-content-center">
+    <div class="col-lg-3 text-center">
+        <h4>Home</h4>
+    </div>
+    <div class="col-lg-2 d-flex flex-column align-items-center justify-content-center mb-3">
+    </div>
+    <div class="col-lg-3 text-center">
+        <h4>Away</h4>
+    </div>
+</div>
 {% for currentGame in gameData %} {% if currentGame.game.pickLocked == False %} {% if currentGame.gameChoice.pickWinner != None %}
-
 <!-- Picks have been made -->
 <div class="d-flex flex-row justify-content-center">
     {% if currentGame.gameChoice.pickWinner == currentGame.game.homeTeam %}
