--- a/bets/templates/bets/bets.html
+++ b/bets/templates/bets/bets.html
@@ -50,18 +50,10 @@
     </div>
 </div>
 {% if gameData %}
-<div class="d-flex flex-row justify-content-start">
-    <div class="dropdown flex-grow-1">
-        <button class="btn btn-grey dropdown-toggle mr-2" id="weekId" name="{{ week }}" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Week {{ week }}</button>
-        <div class="dropdown-menu">
-            {% for week in weeks %}
-            <a class="dropdown-item" href="/home/{{ week }}/">Week {{ week }}</a> {% endfor %}
-        </div>
-    </div>
-    <button class="btn btn-green mr-2" id="saveBets">Save Bets</button>
-    <button class="btn btn-sm btn-grey" data-toggle="modal" data-target="#deleteCOnfirm">Help</button>
-</div>
 <!-- Total Points Display -->
+<div class="d-flex flex-row justify-content-center">
+    <small class="font-italic">Save your bets at the bottom of the page</small>
+</div>
 <div class="d-flex flex-row justify-content-center mt-2 mb-2">
     <div class="col-lg-3 point-box text-center">
         <div class="d-flex flex-row justify-content-center">
@@ -71,13 +63,15 @@
             <h6 id="totalPoints"> {{ userScore }}</h6>
         </div>
     </div>
-    <div class="col-lg-2 p-0"></div>
+    <div class="col-lg-2 text-center">
+        <button class="btn btn-light h-100" data-toggle="modal" data-target="#deleteCOnfirm">Help</button>
+    </div>
     <div class="col-lg-3 point-box text-center">
         <div class="d-flex flex-row justify-content-center">
             <small>Available: </small>
         </div>
         <div class="d-flex flex-row justify-content-center">
-            <h6 id="pointsToBet"> {{ userScore }}</h6>
+            <h6 id="pointsToBet" class="mb-0"> {{ userScore }}</h6>
         </div>
     </div>
 </div>
@@ -189,7 +183,8 @@
         <h6 class="game-bet-amount">{{ currentGame.gameChoice.betAmount }}</h6>
         {% else %}
         <h6 class="game-bet-amount">0</h6>
-        {% endif %} {% if currentGame.gameChoice.betWinner == None %}
+        {% endif %} 
+        {% if currentGame.gameChoice.betWinner == None %}
         <button class="btn btn-outline-success mr-1 increase-bet-button" type="button" disabled>+</button>
         <button class="btn btn-outline-danger decrease-bet-button" type="button" disabled>-</button> {% else %}
         <button class="btn btn-outline-success mr-1 increase-bet-button" type="button">+</button>
@@ -261,10 +256,14 @@
                 <div><small>{{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }}</small></div>
             </div>
         </div>
-        {% endif %} {% endfor %} {% else %}
+        {% endif %} {% endfor %} 
+        <div class="d-flex flex-row justify-content-center">
+            <button class="btn btn-green" id="saveBets">Save Bets</button>
+        </div>
+        {% else %}
         <div class="row">
             <div class="col text-center">
-                <h5>The upcoming season's games have not yet been entered. Until then, please continue making sure that the league is ready to go with all players registered.</h5>
+                <h5>This week's games have not yet been entered.</h5>
             </div>
         </div>
         {% endif %}
