--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -17,10 +17,16 @@
 </div>
 <div class="container-fluid p-0">
     <div class="d-flex mt-2 mr-3 ml-3">
-        <h1 class="flex-grow-1 text-center"><strong>{{ activeLeague }}</strong></h1>
-        <!--<a class="mt-3" href="/league/admin/{{ activeLeague }}/">
-            <img class="rounded img-fluid" src="{% static 'media/settings.jpg' %}" width="30" height="auto">
-        </a>-->
+        <h2 class="w-100 text-center"><strong>{{ activeLeague }}</strong></h2>
+        {% if gameData %}
+        <div class="dropdown">
+            <button class="btn week-pick dropdown-toggle" id="weekId" name="{{ week }}" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><strong>Week {{ week }}</strong></button>
+            <div class="dropdown-menu">
+                {% for week in weeks %}
+                <a class="dropdown-item" href="/home/{{ week }}/"><strong>{{ week }}</strong></a> {% endfor %}
+            </div>
+        </div>
+        {% endif %}
     </div>
     <div class="row m-0">
         <div class="col p-0">
@@ -151,13 +157,6 @@
                 <!-- Game Summary tab -->
                 <div class="tab-pane fade" id="nav-games" role="tabpanel" aria-labelledby="nav-games-tab">
                     {% if gameData %}
-                    <div class="dropdown">
-                        <button class="m-2 btn btn-grey dropdown-toggle" id="weekId" name="{{ week }}" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Week {{ week }}</button>
-                        <div class="dropdown-menu">
-                            {% for week in weeks %}
-                            <a class="dropdown-item" href="/home/{{ week }}/">Week {{ week }}</a> {% endfor %}
-                        </div>
-                    </div>
                     <div class="row no-gutters">
                         <div class="col-6 text-center align-middle">
                             <h6><strong>Game</strong></h6>
@@ -242,7 +241,7 @@
                     {% endfor %} {% else %}
                     <div class="row">
                         <div class="col text-center">
-                            <h5>The upcoming season's games have not yet been entered. Until then, please continue making sure that the league is ready to go with all players registered.</h5>
+                            <h5>This week's games have not yet been entered.</h5>
                         </div>
                     </div>
                     {% endif %}
