--- a/home/static/home/dashboard.css
+++ b/home/static/home/dashboard.css
@@ -31,6 +31,15 @@ a.dashboard-menu-item {
     color: black !important;
 }
 
+.week-pick {
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #33A1FD;
+    background-color: #292727;
+    color: #ffffff;
+}
+
 
 /*League Page Style*/
 
