--- a/picks/templates/picks/picks.html
+++ b/picks/templates/picks/picks.html
@@ -1,13 +1,4 @@
 {% load static %} {% if gameData %}
-<div class="d-flex flex-row justify-content-start">
-    <div class="dropdown">
-        <button class="m-2 btn btn-grey dropdown-toggle" id="weekId" name="{{ week }}" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Week {{ week }}</button>
-        <div class="dropdown-menu">
-            {% for week in weeks %}
-            <a class="dropdown-item" href="/home/{{ week }}/">Week {{ week }}</a> {% endfor %}
-        </div>
-    </div>
-</div>
 <div class="d-flex flex-row justify-content-center">
     <div class="col-lg-3 text-center">
         <h4>Home</h4>
@@ -108,7 +99,7 @@
 {% endif %} {% endfor %} {% else %}
 <div class="row">
     <div class="col text-center">
-        <h5>The upcoming season's games have not yet been entered. Until then, please continue making sure that the league is ready to go with all players registered.</h5>
+        <h5>This week's games have not yet been entered.</h5>
     </div>
 </div>
 {% endif %}
