Trying to fix weird issue where help button takes up whole screen

--- a/bets/templates/bets/bets.html
+++ b/bets/templates/bets/bets.html
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="col-lg-2 text-center">
-        <button class="btn btn-light h-100" data-toggle="modal" data-target="#deleteCOnfirm">Help</button>
+        <button class="btn btn-light" data-toggle="modal" data-target="#deleteCOnfirm">Help</button>
     </div>
     <div class="col-lg-3 point-box text-center">
         <div class="d-flex flex-row justify-content-center">
