--- a/bets/static/bets/css/bets.css
+++ b/bets/static/bets/css/bets.css
@@ -7,6 +7,12 @@
     box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.bet-box-locked {
+    margin-bottom: 25px;
+    border-radius: 5px;
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 .bet-box-unselected {
     background-color: #ffffff;
     color: black;
