including notifiy.min.js as a script to load

--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -54,6 +54,7 @@
 
 <!-- Custom js -->
 <script src="{% static 'js/jquery.cookie.js' %}"></script>
+<script src="{% static 'js/notify.min.js' %}"></script>
 
 <!-- Popper.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
