--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -32,7 +32,7 @@
 <div class="container-fluid p-0">
     <div class="d-flex mt-2 mr-3 ml-3">
         <h2 class="w-100 text-center"><strong>{{ activeLeague }}</strong></h2>
-        {% if gameData %}
+        {% if weeks %}
         <div class="dropdown">
             <button class="btn week-pick dropdown-toggle" id="weekId" name="{{ week }}" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><strong>Week {{ week }}</strong></button>
             <div class="dropdown-menu">
