--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -41,6 +41,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item dropdown-account" href="/account/">My Account</a>
+                    <a class="dropdown-item dropdown-account" href="/home/about/">About</a>
                     <a class="dropdown-item dropdown-account" href="/logout/">Logout</a>
                 </div>
             </li>
