Making bet boxes which are locked opaque

--- a/bets/static/bets/css/bets.css
+++ b/bets/static/bets/css/bets.css
@@ -11,6 +11,7 @@
     margin-bottom: 25px;
     border-radius: 5px;
     box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    opacity: .5;
 }
 
 .bet-box-unselected {
