Correct picks now earn you 25 points

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -65,12 +65,13 @@
         </div>
         <div class="card-body">
             <h5 class="card-title">Make Picks</h5>
-            <p class="card-text">Each week, select who you think will win each game. Each pick you guess correctly earns you <strong>50</strong> points. You always want to make your picks because this a free way to earn points without any risk of losing them.</p>
+            <p class="card-text">Each week, select who you think will win each game. Each pick you guess correctly earns you <strong>25</strong> points. You always want to make your picks because this a free way to earn points without any risk of losing them. Picks will lock
+                15 minutes before the game starts.</p>
         </div>
         <div class="card-body">
             <h5 class="card-title">Place Bets</h5>
             <p class="card-text">This is where you can use your hard earned points from correct picks to bet on the spread of the game. If you're not sure how to bet on the spread of the game, click the link below. Bet as much or as little as you would like, and keep in mind
-                you do not need to bet on every game. The payout is equal to 1.9X your bet (Multiply bet amount by 1.9). If your bet is incorrect though, you lose the points you put down.
+                you do not need to bet on every game. The payout is equal to 1.9X your bet (Multiply bet amount by 1.9). If your bet is incorrect though, you lose the points you put down. Bets will lock 15 minutes before the game starts.
             </p>
             <button class="btn btn-green" data-toggle="modal" data-target="#deleteCOnfirm">How to bet</button>
         </div>
