--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -42,6 +42,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item dropdown-account" href="/account/">My Account</a>
                     <a class="dropdown-item dropdown-account" href="/home/about/">About</a>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item dropdown-account" href="/logout/">Logout</a>
                 </div>
             </li>
